feat: 增加g6的树状图

--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,17 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
+
+  <script src="https://gw.alipayobjects.com/os/antv/pkg/_antv.g6-2.2.6/build/g6.js"></script>
+  <div id="mountNode"></div>
+  <script>
+
+  </script>
+  <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
     <div id="root"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
